--- a/build.gradle
+++ b/build.gradle
@@ -26,8 +26,12 @@ dependencies {
 	implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:2.1.3'
 	compileOnly 'org.projectlombok:lombok'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
+	compile 'org.mariadb.jdbc:mariadb-java-client'
 	annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
 	annotationProcessor 'org.projectlombok:lombok'
+
+	// https://mvnrepository.com/artifact/com.zaxxer/HikariCP
+	//compile group: 'com.zaxxer', name: 'HikariCP', version: '3.4.1'
 
 	//jjwt
 	// https://mvnrepository.com/artifact/io.jsonwebtoken/jjwt
