--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -11,7 +11,7 @@ server:
 spring:
  profiles: local
  datasource:
-  jdbc-url: jdbc:mariadb://192.168.99.100:3306/chatters?autoReconnection=true&zeroDateTimeBehavior=convertToNull&characterEncoding=utf8&allowMultiQueries=true
+  url: jdbc:mariadb://192.168.99.100:3306/chatters?autoReconnection=true&zeroDateTimeBehavior=convertToNull&characterEncoding=utf8&allowMultiQueries=true
   driver-class-name: org.mariadb.jdbc.Driver
   username: root
   password: chatters1@#
@@ -25,5 +25,5 @@ spring:
 logging:
   level:
     root: INFO
-    com.klover: DEBUG
+    com.kms: DEBUG
     jdbc.sqlonly: DEBUG
