--- a/build.gradle
+++ b/build.gradle
@@ -30,12 +30,20 @@ dependencies {
 	annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
 	annotationProcessor 'org.projectlombok:lombok'
 
+	// https://mvnrepository.com/artifact/com.google.code.gson/gson
+	compile group: 'com.google.code.gson', name: 'gson', version: '2.8.6'
+
+
 	// https://mvnrepository.com/artifact/com.zaxxer/HikariCP
 	//compile group: 'com.zaxxer', name: 'HikariCP', version: '3.4.1'
 
 	//jjwt
-	// https://mvnrepository.com/artifact/io.jsonwebtoken/jjwt
+	//https://mvnrepository.com/artifact/io.jsonwebtoken/jjwt
 	compile group: 'io.jsonwebtoken', name: 'jjwt', version: '0.9.1'
+
+	// implementation "io.jsonwebtoken:jjwt-api:0.11.0"
+	// implementation "io.jsonwebtoken:jjwt-jackson:0.11.0", {exclude group:'io.jsonwebtoken', module:'jjwt-api'}
+	// implementation "io.jsonwebtoken:jjwt-impl:0.11.0", {exclude group:'io.jsonwebtoken', module:'jjwt-api'}
 
 
 	testImplementation('org.springframework.boot:spring-boot-starter-test') {
