2020-08-23 22:08  - token validation이 계속 실패하는 현상 디버깅 중 token에 "" 이 붙어있는 것을 발견하고 제거하는 함수 추가.  - typescript의 영향인지, token이 넘어올 때 Bearer "E53jUks..." <- 이런식으로 넘어오고 있었음.

--- a/build.gradle
+++ b/build.gradle
@@ -41,9 +41,13 @@ dependencies {
 	//https://mvnrepository.com/artifact/io.jsonwebtoken/jjwt
 	compile group: 'io.jsonwebtoken', name: 'jjwt', version: '0.9.1'
 
-	// implementation "io.jsonwebtoken:jjwt-api:0.11.0"
-	// implementation "io.jsonwebtoken:jjwt-jackson:0.11.0", {exclude group:'io.jsonwebtoken', module:'jjwt-api'}
-	// implementation "io.jsonwebtoken:jjwt-impl:0.11.0", {exclude group:'io.jsonwebtoken', module:'jjwt-api'}
+	//jjwt 최신버전
+	// dependencies {
+    // compile 'io.jsonwebtoken:jjwt-api:0.11.2'
+    // runtime 'io.jsonwebtoken:jjwt-impl:0.11.2', 'io.jsonwebtoken:jjwt-gson:0.11.2'
+	// Uncomment the next line if you want to use RSASSA-PSS (PS256, PS384, PS512) algorithms:
+	//'org.bouncycastle:bcprov-jdk15on:1.60',
+	//'io.jsonwebtoken:jjwt-jackson:0.11.2' // or 'io.jsonwebtoken:jjwt-gson:0.11.2' for gson
 
 
 	testImplementation('org.springframework.boot:spring-boot-starter-test') {
