--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,26 +1,28 @@
 spring:
- profiles:
-  active:
-   - local
+  profiles:
+    active:
+      - local
 
 server:
- port: 8080
+  port: 8080
 
 ---
-
 spring:
- profiles: local
- datasource:
-  url: jdbc:mariadb://192.168.99.100:3306/chatters?autoReconnection=true&zeroDateTimeBehavior=convertToNull&characterEncoding=utf8&allowMultiQueries=true
-  driver-class-name: org.mariadb.jdbc.Driver
-  username: root
-  password: chatters1@#
-  hikari:
-   max-lifetime: 30000
-   idle-timeout: 30000
-   connection-timeout: 30000
-   maximum-pool-size: 10
-   connection-test-query: SELECT 1
+  profiles: local
+  datasource:
+    url: jdbc:mariadb://192.168.99.100:3306/chatters?autoReconnection=true&zeroDateTimeBehavior=convertToNull&characterEncoding=utf8&allowMultiQueries=true
+    driver-class-name: org.mariadb.jdbc.Driver
+    username: root
+    password: chatters1@#
+    hikari:
+      max-lifetime: 30000
+      idle-timeout: 30000
+      connection-timeout: 30000
+      maximum-pool-size: 10
+      connection-test-query: SELECT 1
+  redis:
+    host: localhost
+    port: 6379
 
 logging:
   level:
