stompinterceptor 에서 CONNECT 시 JWT 인증 구현해보려고, websocket security 도입해봤는데 원하는 동작을 하지 않음... 이건 추후 연구해보는 걸로 하고 일단 redis로 채팅세션 저장, 서버에서 입장, 퇴장 구현해보자.

--- a/build.gradle
+++ b/build.gradle
@@ -37,10 +37,12 @@ dependencies {
 	// https://mvnrepository.com/artifact/it.ozimov/embedded-redis
 	testCompile group: 'it.ozimov', name: 'embedded-redis', version: '0.7.2'
 
-
-
 	// https://mvnrepository.com/artifact/com.zaxxer/HikariCP
 	//compile group: 'com.zaxxer', name: 'HikariCP', version: '3.4.1'
+
+	
+	// https://mvnrepository.com/artifact/org.springframework.security/spring-security-messaging
+	compile group: 'org.springframework.security', name: 'spring-security-messaging', version: '5.4.2'
 
 	//jjwt
 	//https://mvnrepository.com/artifact/io.jsonwebtoken/jjwt
