--- a/build.gradle
+++ b/build.gradle
@@ -35,7 +35,7 @@ dependencies {
 	// https://mvnrepository.com/artifact/com.google.code.gson/gson
 	compile group: 'com.google.code.gson', name: 'gson', version: '2.8.6'
 	// https://mvnrepository.com/artifact/it.ozimov/embedded-redis
-	testCompile group: 'it.ozimov', name: 'embedded-redis', version: '0.7.2'
+	compile group: 'it.ozimov', name: 'embedded-redis', version: '0.7.2'
 
 	// https://mvnrepository.com/artifact/com.zaxxer/HikariCP
 	//compile group: 'com.zaxxer', name: 'HikariCP', version: '3.4.1'
